[gd_scene load_steps=11 format=2]

[ext_resource path="res://Bingus Assets/graphics/titlescreen.png" type="Texture" id=1]
[ext_resource path="res://Bingus Assets/graphics/gradius.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Title/BingusTitle.gd" type="Script" id=3]
[ext_resource path="res://Bingus Assets/sounds/bingus_title2.wav" type="AudioStream" id=4]
[ext_resource path="res://Bingus Assets/sounds/bingus_title4.wav" type="AudioStream" id=5]
[ext_resource path="res://Bingus Assets/sounds/bingus_title3.wav" type="AudioStream" id=6]
[ext_resource path="res://Bingus Assets/sounds/bingus_title1.wav" type="AudioStream" id=7]
[ext_resource path="res://Fades/Fadein.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fades/Fadeout.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="BingusTitle" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -577.0
margin_top = 265.0
margin_right = 577.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 1 )
text = "PRESS LEFT MOUSE OR ANY CONTROLLER BUTTON TO BEGIN"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="Track1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Track2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Track3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Track4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Fadein" parent="." instance=ExtResource( 8 )]

[node name="Fadeout" parent="." instance=ExtResource( 9 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 27.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
